--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boiler Plate</title>
-</head>
-<body>
+    <link rel="stylesheet" href="src/CSS/style.css" />
+  </head>
+  <body>
     <header>
-        <h1>Boiler Plate</h1>
+      <h1>Boiler Plate</h1>
     </header>
     <main></main>
     <footer>
-        <p id="developer">Developed by Gian2077</p>
-        <p id="version">Version 1.0.0</p>
+      <p id="developer">Developed by Gian2077</p>
+      <p id="version">Version 1.0.0</p>
     </footer>
-</body>
+  </body>
 </html>
